// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ui/monitoring/values/_raw > should not render when not visible 1`] = `null`;

exports[`ui/monitoring/values/_raw > should render 1`] = `
<section
  className="msla-trace-value-label"
>
  <label
    className="msla-trace-value-display-name"
  >
    display-name
  </label>
  <div
    className="msla-colorizer-json-body"
  >
    <div
      aria-label="display-name"
      aria-readonly="true"
      className="msla-colorizer-wrapper"
      role="textbox"
      tabIndex={0}
    >
      <div
        className="buttons"
      >
        <button
          aria-label="Copy the value of 'display-name' to the clipboard"
          className="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onPointerEnter={[Function]}
          onPointerLeave={[Function]}
          type="button"
        >
          <span
            className="fui-Button__icon rywnvv2"
          >
            <span
              data-testid="fluent-icon"
            />
          </span>
        </button>
      </div>
      <pre
        className="prism-code language-json"
        style={
          {
            "backgroundColor": "#ffffff",
            "color": "#000000",
          }
        }
      >
        <div
          className="token-line"
          style={
            {
              "backgroundColor": undefined,
              "color": "#000000",
            }
          }
        >
          <span
            className="token plain"
          >
            value
          </span>
        </div>
      </pre>
    </div>
  </div>
</section>
`;

exports[`ui/monitoring/values/_raw > should rendered a zero-width space if value is empty 1`] = `
<section
  className="msla-trace-value-label"
>
  <label
    className="msla-trace-value-display-name"
  >
    display-name
  </label>
  <div
    className="msla-colorizer-json-body"
  >
    <div
      aria-label="display-name"
      aria-readonly="true"
      className="msla-colorizer-wrapper"
      role="textbox"
      tabIndex={0}
    >
      <div
        className="buttons"
      >
        <button
          aria-label="Copy the value of 'display-name' to the clipboard"
          className="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onPointerEnter={[Function]}
          onPointerLeave={[Function]}
          type="button"
        >
          <span
            className="fui-Button__icon rywnvv2"
          >
            <span
              data-testid="fluent-icon"
            />
          </span>
        </button>
      </div>
      <pre
        className="prism-code language-json"
        style={
          {
            "backgroundColor": "#ffffff",
            "color": "#000000",
          }
        }
      >
        <div
          className="token-line"
          style={
            {
              "backgroundColor": undefined,
              "color": "#000000",
            }
          }
        >
          <span
            className="token plain"
          >
            ‌
          </span>
        </div>
      </pre>
    </div>
  </div>
</section>
`;
